--- a/main.ipynb
+++ b/main.ipynb
@@ -1169,9 +1169,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7531aa8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "632b5491",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "ImportError",
